<resources>
    <string name="app_name">RoomRentalAuth</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="no_account">Don’t have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="already_have_account_login">Already have an account? Sign in</string>
</resources>
